--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2021"
 
 [[bin]]
 name = "database_runner"
-path = "src/database_runner.rs"
+path = "src/bin/database_runner.rs"
 
 [[bin]]
 name = "server"
-path = "src/server.rs"
+path = "src/bin/server.rs"
 
 
 [dependencies]
