--- a/heart/Cargo.toml
+++ b/heart/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-zebra = { git = "https://github.com/barmettlerl/tenacious-zebra" }
+tenacious-zebra = { git = "https://github.com/barmettlerl/tenacious-zebra.git" }
+rand = "0.8.5"
