--- a/heart/Cargo.toml
+++ b/heart/Cargo.toml
@@ -12,3 +12,4 @@ tenaciouszebra-dashmap = { package="tenaciouszebra", git = "https://github.com/b
 rand = "0.8.5"
 dashmap = "5.5.3"
 csv = "1.3.0"
+rocksdb = "0.21.0"
